--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,29 @@
   "name": "Alex Brown",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "AB128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "AB64.png",
       "sizes": "64x64",
-      "type": "image/x-icon"
+      "type": "image/png"
+    },
+    {
+      "src": "AB32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "AB24.png",
+      "sizes": "24x24",
+      "type": "image/png"
+    },
+    {
+      "src": "AB16.png",
+      "sizes": "16x16",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
